--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
         uses: actions/setup-java@v2.1.0
         with:
            java-version: 11
-           distribution: 'zulu'          
+           distribution: 'zulu'
       -
         name: Gradle build
         uses: gradle/gradle-build-action@v2
         with:
            wrapper-directory: gradle/wrapper
            gradle-executable: gradlew
-           arguments: publishPlugins --stacktrace --debug -Pgradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} -Pgradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }}
+           arguments: publishPlugins --stacktrace --info --no-daemon -XX:MaxMetaspaceSize=2G -Pgradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} -Pgradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }}
