--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
         with:
            wrapper-directory: gradle/wrapper
            gradle-executable: gradlew
-           arguments: publishPlugins --stacktrace --info --no-daemon -XX:MaxMetaspaceSize=2G -Pgradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} -Pgradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }}
+           arguments: publishPlugins --stacktrace --info --no-daemon -Pgradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} -Pgradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }}
