--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,5 @@ jobs:
         name: Gradle build
         uses: gradle/gradle-build-action@v2
         with:
-           wrapper-directory: gradle/wrapper
            gradle-executable: gradlew
-           arguments: publishPlugins --stacktrace --info --no-daemon -Pgradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} -Pgradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }}
+           arguments: publishPlugins --stacktrace --no-daemon --continue -Pgradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} -Pgradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }}
